--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.8.1
-Django==4.2.13
-django-cors-headers==4.4.0
+dj-database-url==2.2.0
+Django==5.0.6
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==22.0.0
+packaging==24.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-decouple==3.8
 sqlparse==0.5.0
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 tzdata==2024.1
